<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_launcher_foreground"
                android:text="Hello World!"
                app:layout_constraintBottom_toTopOf="@id/etUsername"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/etUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/tv_email"
                app:layout_constraintBottom_toTopOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/tv_password"
                app:layout_constraintEnd_toEndOf="@id/etUsername"
                app:layout_constraintStart_toStartOf="@id/etUsername"
                app:layout_constraintTop_toBottomOf="@id/etUsername" />

            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/btn_signin"
                app:layout_constraintBottom_toTopOf="@id/btnFacebook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPassword" />

            <Button
                android:id="@+id/btnFacebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/btn_signinFB"
                app:layout_constraintBottom_toTopOf="@id/tvRecovery"
                app:layout_constraintEnd_toEndOf="@id/btnIngresar"
                app:layout_constraintStart_toStartOf="@id/btnIngresar"
                app:layout_constraintTop_toBottomOf="@id/btnIngresar" />

            <TextView
                android:id="@+id/tvRecovery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                android:alpha="0.8"
                android:text="@string/tv_recovery_password"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvRegister"
                app:layout_constraintStart_toStartOf="@id/btnFacebook"
                app:layout_constraintTop_toBottomOf="@id/btnFacebook" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="right"
                android:text="@string/tv_register"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tvRecovery"
                app:layout_constraintEnd_toEndOf="@id/btnFacebook"
                app:layout_constraintStart_toEndOf="@id/tvRecovery"
                app:layout_constraintTop_toTopOf="@id/tvRecovery" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>